2014-23-02 Paulo Andrade <pcpa@gnu.org>

	*  lib/jit_x86.c: Rewrite previous patch to inline save/restore
	because clobbering %ebx in x86 is treated as an error
	(jit_x86.c:239:5: error: PIC register clobbered by 'ebx' in 'asm').

2014-19-02 Paulo Andrade <pcpa@gnu.org>

	* lib/jit_x86.c: Rewrite incorrect inline assembly that could
	truncate a variable in a callee save register. Now it simply
	tells gcc that the register is clobbered, instead of using a
	*32 bit* swap with a temporary variable. The problem only
	happens when compiling with optimization.

2014-19-02 Paulo Andrade <pcpa@gnu.org>

	* include/lightning/jit_aarch64.h, include/lightning/jit_arm.h,
	include/lightning/jit_hppa.h, include/lightning/jit_ia64.h,
	include/lightning/jit_mips.h, include/lightning/jit_ppc.h,
	include/lightning/jit_s390x.h, include/lightning/jit_sparc.h,
	include/lightning/jit_x86.h: Change jit_regset_t to an
	unsigned type, to allow safe right shift.

	* lib/lightning.c: Rewrite jit_regset_scan1 to allow easier
	compiler optimization.

2013-12-03 Paulo Andrade <pcpa@gnu.org>

	* lib/jit_x86-x87.c: Correct wrong optimization when
	loading the log(2) constant.

2013-12-03 Paulo Andrade <pcpa@gnu.org>

	* lib/jit_x86-cpu.c: Use the emms instruction before
	calling any function. This is particularly important
	when using c99 complex functions as it can easily
	overflow the x87 stack due to the way lightning uses
	the x87 stack as a flat register file.

2013-12-02 Paulo Andrade <pcpa@gnu.org>

	* lib/jit_x86-x87.c: Correct wrong code generation due
	to comparing the base and not the value register with
	%st(0) in stxi_f.

2013-12-02 Paulo Andrade <pcpa@gnu.org>

	* lib/jit_x86-x87.c, lib/jit_x86.c: Use 8 bytes aligned
	stack offset for float/double x87 to/from sse move.

2013-11-27 Paulo Andrade <pcpa@gnu.org>

	* configure.ac, lib/jit_arm-swf.c, lib/jit_arm.c: Add
	changes that should at least allow building lightning
	on Apple iOS7.

2013-10-08 Paulo Andrade <pcpa@gnu.org>
